# libfork

./: .gitignore  CMakeLists.txt  Makefile.am  README  README.md  configure.ac  fork.pc.in
debian/: changelog  control  rules
include/: fork.h
lib/: CMakeLists.txt  Makefile.am  fork.c
src/: CMakeLists.txt  Makefile.am  fork-to.c  fork.c
